[package]
name = "OtherEngine"
version = "0.1.0"
authors = ["yangdao <458424869@qq.com>"]
edition = "2018"



[dependencies]
#qjs-rs = {path = "../qjs-rs"}
winit = "0.19.4"
gfx = "0.18.2"
gfx-backend-gl = { version = "0.3.0", optional = true}  
gfx-hal = "0.3.1"
glutin = "0.22.0-alpha3"
cgmath = "0.17.0"
glsl-to-spirv = "0.1.7"
byteorder = "1.3.2"
chrono = "0.4.9"
trees = "0.2.1"
#[profile.release]
#opt-level = 'z'  # Optimize for size.
#lto = true

[features]
default = ["gfx-backend-gl", "gfx-backend-gl/glutin"]

