[package]
name = "OtherEngine"
version = "0.1.0"
authors = ["yangdao <458424869@qq.com>"]
edition = "2018"



[dependencies]
#qjs-rs = {path = "../qjs-rs"}
image = "0.22.3"
winit = "0.19.4"
gfx = "0.18.2"
gfx-backend-gl = { version = "0.3.0", optional = true}  
gfx-hal = "0.3.1"
glutin = "0.22.0-alpha3"
nalgebra = { version = "0.19.0", features = ["serde-serialize", "mint"] }
alga = { version = "0.9.0", default-features = false }
glsl-to-spirv = "0.1.7"
byteorder = "1.3.2"
chrono = "0.4.9"
trees = "0.2.1"
uuid = {version =   "0.8.1", features = ["serde","v4"]}
#[profile.release]
#opt-level = 'z'  # Optimize for size.
#lto = true

[features]
default = ["gfx-backend-gl", "gfx-backend-gl/glutin"]

